Documentation and passing to english methods

--- a/views/game.erb
+++ b/views/game.erb
@@ -21,6 +21,6 @@ jQuery(document).ready(function() {
       bombs = 260;
     break;
   }
-	jQuery('#campo').CampoMinado(columns,rows,bombs);
+	jQuery('#campo').minesweeper(columns,rows,bombs);
 });
 </script>
